<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="192.168.0.8:3306"
        android:key="edit_text_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/insertaddress"
        android:title="@string/address" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="ruben"
        android:key="edit_text_user"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/insertuser"
        android:title="@string/user" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="M4st3rRubi99!"
        android:key="edit_text_password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/insertpassword"
        android:title="@string/password" />
</PreferenceScreen>